<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <!-- opciones del navegador -->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/eventos" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/noticias" />
        <item
            android:id="@+id/nav_descargas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/descargas" />
        <item
            android:id="@+id/nav_foro"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/foro" />
    </group>

</menu>
