<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateLoginActivity">

    <TextView
        android:id="@+id/titulo_create_login"
        style="@style/etiquetas"
        android:layout_alignParentTop="true"
        android:layout_marginTop="30dp"
        android:text="@string/crea_una_cuenta"
        android:textSize="40sp" />

    <LinearLayout
        android:id="@+id/create_login_lineaLayaout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titulo_create_login"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="16dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.design.widget.TextInputLayout
            style="@style/textInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_login_usuario"
                style="@style/textInputEditText"
                android:hint="@string/usuario">
                <requestFocus />
            </android.support.design.widget.TextInputEditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/textInputLayout">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/create_login_password"
                style="@style/textInputEditText"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/create_login_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/create_login_lineaLayaout"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/boton"
        android:text="@string/CrearLogin"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:onClick="crearCuenta"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="cursive"
        android:text="@string/firma"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

</RelativeLayout>